# opencode-smart-routing

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/adapters/: base.py  ollama_adapter.py  openai_compatible_adapter.py
app/api/: chat.py  health.py  router_admin.py
app/core/: fallback_manager.py  feature_extractor.py  policy_loader.py  router_engine.py  settings.py
app/schemas/: openai_chat.py  router_policy.py
app/telemetry/: logger.py  models.py
config/: policy.yaml  providers.yaml
scripts/: run_dev.sh  smoke_test.py
static/: index.html  policy.html  telemetry.html
tests/: test_fallbacks.py  test_openai_format.py  test_routing_rules.py
